--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -17,7 +17,7 @@ h1 {
 
 h2 {
     font-weight:normal;
-    margin:30px 0 0;
+    margin:30px 0 10px 0;
 }
 
 #content {
@@ -81,6 +81,7 @@ input[type=submit] {
 /* comments */
 .comment {
     padding:10px;
+
 }
 .comment:nth-child(even) {
     background:#efefef;
